--- a/resources/style~348x250.css
+++ b/resources/style~348x250.css
@@ -1,10 +1,12 @@
-.qrcode {
-  opacity: 0;
-  x: 50%-112;
-  y: 50%-115;
-  width: 228;
-  height: 228;
+#qr-code-area {
+  x: 50%-113;
+  y: 50%-114;
+  width: 226;
+  height: 226;
 }
-#text {
-  y: 100%+9;
+#qr-code-label {
+  y: 100%+12;
+}
+#pagination-dots {
+  y: 2;
 }
